tests222/tests2/test344.out
lli: <stdin>:1:1: error: expected top-level entity
line 11: variable i is not defined
^
